welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: ')' expected but 'else' found.
	 else {Math.min(Math.abs(a-10),Math.abs(b-10))+10}
         ^